demo how model data drives the view through the controller

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<!-- This section plus related CSS constitute the view for the app. -->
 
 	<div class="container">
-	<h1>Hello, world.</h1>
+	<h1>Hello, Austin.</h1>
 	</div>
 
 
