--- a/index.html
+++ b/index.html
@@ -15,15 +15,16 @@
 </head>
 <body>
 	<!-- This section plus related CSS constitute the view for the app. -->
-
 	<div class="container">
-	<h1>Hello, Austin.</h1>
+		<h1>Hello, Austin.</h1>
 	</div>
-
+	<div id="map"></div>
 
 	<!-- Include the controller and model. -->
-
 	<script src="assets/js/controller.js" type="text/javascript"></script>
 	<script src="assets/js/model.js" type="text/javascript"></script>
+
+	<!-- Include google's map api. -->
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4-iShS_FXpTaYoz6LjgU7Yosbu_cxjsU" async defer></script> 
 </body>
 </html>
