heroku doesn't like insecure http urls.  change marker endpoint to https

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<!-- This section plus related CSS constitute the view for the app. -->
 	<div class="container">
-		<h1>Hello, Austin.</h1>
+		<h1>Hello, Connecticut?!</h1>
 	</div>
 	<div id="map"></div>
 
