Wrestle with google map api loading race condition.
This thread:

   http://stackoverflow.com/questions/32496382/typeerror-window-initmap-is-not-a-function

says to avoid async when loading the google map api from a script tag.

Also, playing with using the "place" property to address map divs.
Fixing some issues with pushing map zoom factor to the model as well.

--- a/index.html
+++ b/index.html
@@ -17,14 +17,16 @@
 	<!-- This section plus related CSS constitute the view for the app. -->
 	<div class="container">
 		<h1>Hello, Connecticut?!</h1>
+		<div class="map-container">
+			<!-- programmatically add map divs here -->
+		</div>
 	</div>
-	<div id="map"></div>
 
 	<!-- Include the controller and model. -->
 	<script src="assets/js/controller.js" type="text/javascript"></script>
 	<script src="assets/js/model.js" type="text/javascript"></script>
 
 	<!-- Include google's map api. -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4-iShS_FXpTaYoz6LjgU7Yosbu_cxjsU" async defer></script> 
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD4-iShS_FXpTaYoz6LjgU7Yosbu_cxjsU" defer></script> 
 </body>
 </html>
