add cLoadPlace() method to controller for fetching and rendering a google map
   Function: cLoadPlace
   Usage: var map = cLoadPlace(model, "austin");
   ---------------------------------------------
   Fetch and render a google background map for a given place.

   The map object is returned for subsequent map api calls
   for rendering markers, etc.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 	<!-- This section plus related CSS constitute the view for the app. -->
 	<div class="container">
-		<h1>Hello, Connecticut?!</h1>
+		<h1>Hello, Austin</h1>
 		<div class="map-container">
 			<!-- programmatically add map divs here -->
 		</div>
