--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 	<!--Bootstrap-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 
+	<!--bootstrap-select css-->
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css">
+
+	<!--bootstrap-select jQuery-->
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
+
 	<!--Font Awesome map pin icon-->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -35,19 +41,11 @@
 			<!--Search buttons-->
 			<div class="col-2-sm">
 			<div class="dropdown">
-  				<button onclick="myFunction()" class="dropbtn" id="button1">Incident type</button>
-			</div>
-			</div>
-			<br>
-			<div class="col-2-sm">
-			<div class="dropdown">
-  				<button onclick="myFunction()" class="dropbtn" id="button2">Date</button>
-			</div>
-			</div>	
-			<br>
-			<div class="col-2-sm">
-			<div class="dropdown">
-  				<button onclick="myFunction()" class="dropbtn" id="button3">Zip Code</button>
+  				<select class="selectpicker">
+  					<option>Mustard</option>
+  					<option>Ketchup</option>
+  					<option>Relish</option>
+				</select>
 			</div>
 			</div>
 		</div>
