--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 			<br>
 			<div class="col-2-sm">
 			<div class="dropdown">
-			<input type="button" value="Reset Zoom" id="button4" onClick="window.location.reload()">
+			<input type="button" value="Reset Zoom" id="button4"
 		</div>
 	</div>
 
