--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 			<br>
 			<div class="col-2-sm">
 			<div class="dropdown">
-			<input type="button" value="Reset Zoom" id="reset-button">
-		</div>
+			<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()"> 
+			</div>
 	</div>
 
 	<!-- Include the controller and model. -->
