--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="container">
 		<div class="jumbotron">
 			<h1 style="color: white"><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
-			 Austin Aware</h1>
+			 <span id="jumbotron-place">Place Aware</span></h1>
 		</div>
 		<div class="row">
 			<div class="col-6-sm map-container" id="map-container">
