--- a/index.html
+++ b/index.html
@@ -30,31 +30,35 @@
 	<!-- This section plus related CSS constitute the view for the app. -->
 	<div class="container">
 		<div class="jumbotron">
-			<h1 style="color: white"><i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
-			 <span id="jumbotron-place">Place Aware</span></h1>
+			<h1 style="color: white">
+				<i class="fa fa-map-marker fa-2x" aria-hidden="true"></i>
+				<span id="jumbotron-place">Place Aware</span>
+			</h1>
 		</div>
+
 		<div class="row">
 			<div class="col-6-sm map-container" id="map-container">
-			<!-- programmatically add map divs here -->
-			<img src="http://placehold.it/640x480" alt="Map">
+				<img src="http://placehold.it/640x480" alt="Map">
 			</div>
 			<!--Search buttons-->
 			<div class="col-2-sm">
-			<div class="dropdown">
-  				<button onclick="myFunction()" class="dropbtn" id="traffic2015-button">2015 Traffic Fatalities</button>
+				<div class="dropdown">
+					<button class="dropbtn" id="traffic2015-button">2015 Traffic Fatalities</button>
+				</div>
 			</div>
-			</div>
-			<br>
+			<br />
 			<div class="col-2-sm">
-			<div class="dropdown">
-  				<button onclick="myFunction()" class="dropbtn" id="traffic2015-button">2016 Traffic Fatalities</button>
+				<div class="dropdown">
+					<button class="dropbtn" id="traffic2016-button">2016 Traffic Fatalities</button>
+				</div>
 			</div>
-			</div>
-			<br>
+			<br />
 			<div class="col-2-sm">
-			<div class="dropdown">
-			<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()"> 
+				<div class="dropdown">
+				<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()">
+				</div>
 			</div>
+		</div>
 	</div>
 
 	<!-- Include the controller and model. -->
