--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
 			<br />
 			<div class="col-2-sm">
 				<div class="dropdown">
+					<button class="dropbtn" id="trafficSignalsOnFlash-button">Traffic Signals On Flash</button>
+				</div>
+			</div>
+			<br />
+			<div class="col-2-sm">
+				<div class="dropdown">
 				<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()">
 				</div>
 			</div>
