add 'austin dangerous dogs' data to the app
This only took 30 minutes given the good separation of
concerns we have with our MVC structure.

1. Update the model with a stanza for dangerous dogs endpoint
   and related attributes.

2. Add a click handler in the controller.

3. Update index.html and the css to add and style the
   new button for the new data source.

Ultimately, steps 2 and 3 will be eliminated once we have
a scalable drop-down selection button which is programmatically
tuned to feed off the model data directly.

--- a/index.html
+++ b/index.html
@@ -61,6 +61,12 @@
 			<br>
 			<div class="col-2-sm">
 				<div class="dropdown">
+					<button class="dropbtn" id="austinDangerousDogs-button">Dangerous Dogs</button>
+				</div>
+			</div>
+			<br>
+			<div class="col-2-sm">
+				<div class="dropdown">
 				<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()">
 				</div>
 			</div>
