--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<br>
 			<div class="col-2-sm">
 				<div class="dropdown">
-				<input type="button" value="Reset Zoom" id="reset-button" onClick="window.location.reload()">
+				<input type="button" value="Reset Zoom" id="reset-button">
 				</div>
 			</div>
 		</div>
