--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
 			</div>
 			<br>
 			<div class="col-2-sm">
-				<div class="dropdown">
-				<input type="button" value="Reset Zoom" id="reset-button">
+				<div class="dropdown" style="margin-top: 0px; padding-top: 5px">
+				<input type="button" value="Reset Map" id="reset-button">
 				</div>
 			</div>
 		</div>
