tune the styling a tad to increase readability contrast and vertical button symmetry
I'm bumping the font-size up a bit and adding an opaque contrast background
that aligns with the color scheme.

--- a/index.html
+++ b/index.html
@@ -37,30 +37,30 @@
 			<!--Search buttons-->
 			<div class="col-2-sm">
 				<div class="dropdown">
-					<button class="dropbtn" id="traffic2015-button">2015 Traffic Fatalities</button>
+					<button class="dropbtn" id="traffic2015-button"><span class="button-text">&nbsp;2015 Traffic Fatalities&nbsp;</span></button>
 				</div>
 			</div>
 			<br>
 			<div class="col-2-sm">
 				<div class="dropdown">
-					<button class="dropbtn" id="traffic2016-button">2016 Traffic Fatalities</button>
+					<button class="dropbtn" id="traffic2016-button"><span class="button-text">&nbsp;2016 Traffic Fatalities&nbsp;</span></button>
 				</div>
 			</div>
 			<br>
 			<div class="col-2-sm">
 				<div class="dropdown">
-					<button class="dropbtn" id="trafficSignalsOnFlash-button">Traffic Signals On Flash</button>
+					<button class="dropbtn" id="trafficSignalsOnFlash-button"><span class="button-text">&nbsp;Traffic Signals On Flash&nbsp;</span></button>
 				</div>
 			</div>
 			<br>
 			<div class="col-2-sm">
 				<div class="dropdown">
-					<button class="dropbtn" id="austinDangerousDogs-button">Dangerous Dogs</button>
+					<button class="dropbtn" id="austinDangerousDogs-button"><span class="button-text">&nbsp;Dangerous Dogs&nbsp;</span></button>
 				</div>
 			</div>
 			<br>
 			<div class="col-2-sm">
-				<div class="dropdown" style="margin-top: 0px; padding-top: 5px">
+				<div class="dropdown" style="margin-top: 0px; padding-top: 24px">
 				<input type="button" value="Reset Map" id="reset-button">
 				</div>
 			</div>
