--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
 			</div>
 			<br>
 			<div class="col-2-sm">
-				<div class="dropdown" style="margin-top: 0px; padding-top: 24px">
+				<div class="dropdown">
+					<button class="dropbtn" id="austinFoundPets-button"><span class="button-text">&nbsp;Found Pets&nbsp;</span></button>
+				</div>
+			</div>
+			<div class="col-2-sm">
+				<div class="dropdown" style="margin-top:20px; padding-top: 0px">
 				<input type="button" value="Reset Map" id="reset-button">
 				</div>
 			</div>
